# isdp

./: Build.md  BuildApp.md  BuildDev04Set.md  BuildOptions.md  BuildScripts.md  Install012510.md  JavaDesktop.md  Laptop.md  MakeFiles.md  Notes20100830.md  OptIngr.md  Overview.md  ProjectHome.md  README.txt  SVN.md  Solaris10.md  Solaris10VM.md  TableOfContents.md  VMMachines.md  configure.ss  libxc.md  test.rim  test.rim.md
auto/: Makefile.am  configure.ac  configure.sh  configure.ss  notes.txt
auto/base/: Makefile.am
auto/base/parser/: main.c
auto/base/ris/: Makefile.am  VDrisUtil.c  main.c  mainx.c  ris_net.c  risx.h
auto/base/ums/: UMS.h  main.c  ums.c
auto/book/tars/: small-2.0.tar
auto/exec/: main.c
auto/glib/basic/: Makefile.am  basic.c  hash.c  tests.h
auto/glib/dload/: Makefile.am  module03.c  module05.c  tests.c
auto/glib/lib/: Makefile.am  hash.h
auto/tars/: foonly-2.0.tar
auto10/ris/tests/: Makefile.am  mainx.c  ris_net.c  ris_stmt.c
exnuc/app/: Makefile.am  app.m
exnuc/icob/: Makefile.am  cob.version  makefile.nt  version.bat
exnuc/icob/actions/: actions.m  actions.m.org  makefile
exnuc/icob/ceo/: arg_name.I  ceo.m  delete.I  display_form.I  filter.I  real_execute.I  shove_str.C
exnuc/icob/include/: sli.h
exnuc/icob/shfn/: shellvar.C  shfn.m  shfn.m.org
exnuc/icob/sli/: act_out.C  args_declare.C  declare.C  do_args.C  do_var.C  end.C  find_msg.C  options.C  put.C  put_strs.C  response.C  slic.C  slil.l_SAV  sliml.l  sliyy.C  sub_resp.C
exnuc/icob/state/: makefile  state.m.org
exnuc/icob/trans/: makefile  trans.m
exnuc/icob/util/: eval_str.C  read_t_next.I  util.m
exnuc/message/src/: MSfile.C  MSonoff.C  Makefile.am  Makefile.org
exnuc/om/spec/: Makefile.am  OMISO.S  OMMOSDOS.S  OMOSCO.S.xml  OMTag.S  spec.m
exnuc/om/src/: Makefile.am  OMClusterr.I  OMOSCOi.I  OMObjSpacei.I  OMSupGroupi.I  OMTagConi.I  OMUNIXcode.C  OMarch.C  OMbdump.C  OMbinsert.C  OMchansupp1.C  OMclasssupp.C  OMconnect.C  OMextent.C  OMifrtree.C  OMinitialize.C  OMpms.C  OMrtree3df.C  OMrtreehis.C  OMsend.C  OMsibling.C  OMtags.C  OMvararray.C  makefile  src.m
trunk/: README.txt  configure.ac
trunk/aim/include/: VDPDatFrmDf.h  schemas
trunk/auto/: Makefile.am  configure.ac  configure.sh  configure.ss  notes.txt
trunk/auto/bool/: convenience-2.0.tar
trunk/auto/exec/: Makefile.am
trunk/auto/glib/: Makefile.am
trunk/auto10/: Makefile.am  configure.ac  configure.ss  notes.txt
trunk/auto10/exec/: func.c
trunk/bspmath/include/: bsequat.h  bsglobal.h  bsisort.h  bsmemory.h  bsplpchlgd.h  bssfsf_int2.h  bsstackalloc.h  bsvalues.h  bsvalues_nt.h  bsvalues_sn.h  igr.h  ma.h
trunk/deltools/: Makefile
trunk/deltools/deliv/: Build  README  install.sh  install.sun  p.def.ssl
trunk/deltools/nbproject/: Package-Debug.bash  project.xml
trunk/deltools/src/: spc_history
trunk/exnuc/: Makefile.am  build_errors.txt  configure.ac  exnucmakelib  makefile
trunk/exnuc/app/: makefile
trunk/exnuc/bin_src/: fread_input.c  is_file.c  makemake  reduce_pth.c  version.c
trunk/exnuc/config/: component.db
trunk/exnuc/dict/: OMrtree_temp.T
trunk/exnuc/exec/: Makefile.am  makefile.nt
trunk/exnuc/igefei/: Makefile.am  makefile
trunk/exnuc/include/: COBmsg.h  EXproduct.h  OMMOSD.h  OMOSfilehdr.h  OMprimitives.h  igewindef.h  igewinerr.h
trunk/exnuc/lib/: Makefile.am  linkstub.m  makefile
trunk/exnuc/lib_src/: exnucXstub.c  objects.m  stubs.m
trunk/exnuc/nbproject/: Makefile-impl.mk
trunk/exnuc/notes/: mkptypes.doc
trunk/exnuc/nt/: log.bat
trunk/exnuc/om/: Makefile.am
trunk/exnuc/package/: makefile
trunk/exnuc/rap/: makefile  rapstub.c
trunk/exnuc/save/: makefile_SAV  makefile_STRIP  objectlist_DYNAMIC
trunk/exnuc/spec/: APPcolor.S  DIbstgr.S  DIroot.S  EX_fbackup.S  EX_funcky.S  EX_swapmenu.S  EX_test.S  IGEwsys.S  Makefile.am  OMSupGroup.S  super_cmd.S
trunk/exnuc/stubs/: Makefile.am  Makefile.org  exnucXstub.c  lib.m
trunk/exnuc/version/: EXNUCclassinit.C  Makefile.am  makefile  version.m
trunk/fontserver/: .env  .profile
trunk/fontserver/del/: Last.release  remove.sun
trunk/fontserver/nbproject/: Makefile-Debug.mk  Package-Debug.bash  configurations.xml  project.xml
trunk/fontserver/src/: LOC
trunk/grnuc/: islmakelib_GRNUC  islmakelib_SAV  objectlist_DYNAMIC_all
trunk/grnuc/IGDScell/: dinfont40.cel  font127.cel  font26.cel  font42.cel
trunk/grnuc/app/: MODELver.c
trunk/grnuc/appx/: makefile
trunk/grnuc/bin_src/: .lgshell  GRenv.isl  Keywords  gencmdtest.sh  hdr  lgshell
trunk/grnuc/cc/: COcc.S  COcci.I
trunk/grnuc/config/: ASattribute  ASpan0.sym  DIM_DIN  DIM_ISO  Draft.otl  ISO_Borders  command_table  ems_mloc  gr.cmd
trunk/grnuc/include/: ACheader.h  AS_status.h  COmdef.h  COrattrdef.h  DImacros.h  DPvd.h  EMdtmacros.h  GM.h  GRascopy.h  IGRhashdef.h  RAPvers.h  SSdef.h  SSmacros.h  TRprod_name.h  UOMdef.h  UOMmacros.h  acmacros.h  adpdef.h  asmacros.h  attrco.h  batch.h  cctmsg.h  ci_macro.h  cidb.h  cidef.h  cieveryone.h  cilocate.h  ciminimum.h  cmd_struct.h  codynmeas.h  coimport.h  comn.h  comodmac.h  coniarray.h  coreadout.h  detailcodef.h  dimdef.h  dimform.h  dimmacros.h  dimplace.h  (+31 more)
trunk/grnuc/integ/: buildtest.sh  errrpt  fetchsrc  flipstat.sh  getversion.sh  grcpunixinc.sh  grmkpplsrc.sh  grtouchmbs.sh  help.sh  integ.env_grnuc  make.all.org  makelist  mkmkdict.sh  ncat  rmmake.sh
trunk/grnuc/lib/: makefile
trunk/grnuc/nbproject/: Makefile-Release.mk  Makefile-variables.mk  Package-Release.bash  configurations.xml  project.xml
trunk/grnuc/proto_priv/: ACcpx_loc.h  ACdiowneri.h  ACfunct.h  ACmodeli.h  ACndir.h  ACqueri.h  ACrep_sup.h  ACsym_prt.h  ASputobj.h  ASsourcei.h  ASsourcenoti.h  COarctocr.h  COcdpath.h  COcenconic.h  COconstr.h  COcppar.h  COcrecrchd.h  COcvtype5lv3.h  COdeltawld.h  COdirmode.h  COdirxlate.h  COdiscoords.h  COdpblib.h  COgenmxpts.h  (+173 more)
trunk/model/: MODELver.c  Makefile  exdate.h  exvers.h  filenames  hsurfmakelib  modelmakelib_STAT  v11.def  vemakelib
trunk/pdu/: notes.txt
trunk/ris/: notes.txt
trunk/ris540/: notes.txt
trunk/vds/: .cvsignore
(+35570 files in other folders)
