include $(top_srcdir)/build/makerules

noinst_LTLIBRARIES = libicob.la
libicob_la_CFLAGS  = $(gio_DEPS_CFLAGS)

libicob_la_SOURCES = \
 actions/do_it_a.I    \
 actions/set_a.C      \
 state/do_it_s.I      \
 ceo/action.I         \
 ceo/arg_button.I     \
 ceo/arg_name.I       \
 ceo/delete.I         \
 ceo/dynamics.I       \
 ceo/error_box.I      \
 ceo/execute.I        \
 ceo/filter.I         \
 ceo/form.I           \
 ceo/init.I           \
 ceo/msg.I            \
 ceo/predicate.I      \
 ceo/prompt.I         \
 ceo/read_t_file.I    \
 ceo/real_execute.I   \
 ceo/sleep.I          \
 ceo/shove_str.C      \
 ceo/status.I         \
 ceo/status_disp.I    \
 ceo/wakeup.I         \
 trans/do_it_t.I      \
 trans/set_t.I        \
 util/util_all.C      \
 shfn/find_file.C     \
 shfn/shellvar.C

CLEANFILES = \
 actions/do_it_a.c    \
 actions/set_a.c      \
 state/do_it_s.c      \
 ceo/action.c         \
 ceo/arg_button.c     \
 ceo/arg_name.c       \
 ceo/delete.c         \
 ceo/dynamics.c       \
 ceo/error_box.c      \
 ceo/execute.c        \
 ceo/filter.c         \
 ceo/form.c           \
 ceo/init.c           \
 ceo/msg.c            \
 ceo/predicate.c      \
 ceo/prompt.c         \
 ceo/read_t_file.c    \
 ceo/real_execute.c   \
 ceo/sleep.c          \
 ceo/shove_str.c      \
 ceo/status.c         \
 ceo/status_disp.c    \
 ceo/wakeup.c         \
 trans/do_it_t.c      \
 trans/set_t.c        \
 util/util_all.c      \
 shfn/find_file.c     \
 shfn/shellvar.c