include $(top_srcdir)/build/makerules

noinst_LTLIBRARIES = libmessage.la
libmessage_la_CFLAGS  = $(gio_DEPS_CFLAGS)

libmessage_la_SOURCES = \
 MSmsg.C        \
 MSfile.C       \
 MSretmsg.C     \
 MSonoff.C      \
 MSdismsg.C     \
 MSgmessage.C   

CLEANFILES = \
 MSmsg.c        \
 MSfile.c       \
 MSretmsg.c     \
 MSonoff.c      \
 MSdismsg.c     \
 MSgmessage.c   
