include $(top_srcdir)/build/makerules

IG_OPP_INCLUDES += -I ../include -I ../spec

noinst_LTLIBRARIES  = libom_src.la

libom_src_la_CFLAGS   = $(gio_DEPS_CFLAGS)

libom_src_la_SOURCES  = \
 OMClusteri.I \
 OMClusterr.I \
 OMFiledOSi.I \
 OMFiledOSr.I \
 OMGroupi.I \
 OMISOdiri.I \
 OMISOi.I \
 OMMOSDOSi.I \
 OMMOSDi.I \
 OMOSCOi.I \
 OMObjSpacei.I \
 OMTagConi.I \
 OMTagi.I \
 OMTransOSi.I \
 OMUNIXcode.C \
 OMbcluster.C \
 OMbcreate.C \
 OMbdelete.C \
 OMbdump.C \
 OMbinsert.C \
 OMblkmv.C \
 OMbransear.C \
 OMbsearch.C \
 OMbtreei.I \
 OMchansupp1.C \
 OMclasses.C \
 OMclasssupp.C \
 OMconnect.C \
 OMconstruct.C \
 OMextent.C \
 OMglobaldata.C \
 OMifrtree.C \
 OMindexi.I \
 OMinitialize.C \
 OMintercept.C \
 OMobjid.C \
 OMobjspace.C \
 OMordersend.C \
 OMpms.C \
 OMppgd.C \
 OMprodem.C \
 OMrecognize.C \
 OMrtree3df.C \
 OMrtreehis.C \
 OMrtreei.I \
 OMsend.C \
 OMslotCntrl.C  \
 OMsmmalloc.C   \
 OMsupport.C    \
 OMtags.C       \
 OMvararray.C   \
 Rooti.I        \
 OMSupGroupi.I  \
 OMarch.C       \
 OMsibling.C

CLEANFILES =    \
 OMClusteri.c   \
 OMClusterr.c   \
 OMFiledOSi.c   \
 OMFiledOSr.c   \
 OMGroupi.c     \
 OMISOdiri.c    \
 OMISOi.c       \
 OMMOSDOSi.c    \
 OMMOSDi.c      \
 OMOSCOi.c      \
 OMObjSpacei.c  \
 OMTagConi.c    \
 OMTagi.c       \
 OMTransOSi.c   \
 OMUNIXcode.c   \
 OMbcluster.c   \
 OMbcreate.c    \
 OMbdelete.c    \
 OMbdump.c      \
 OMbinsert.c    \
 OMblkmv.c      \
 OMbransear.c   \
 OMbsearch.c    \
 OMbtreei.c     \
 OMchansupp1.c  \
 OMclasses.c    \
 OMclasssupp.c  \
 OMconnect.c    \
 OMconstruct.c  \
 OMextent.c     \
 OMglobaldata.c \
 OMifrtree.c    \
 OMindexi.c     \
 OMinitialize.c \
 OMintercept.c  \
 OMobjid.c      \
 OMobjspace.c   \
 OMordersend.c  \
 OMpms.c        \
 OMppgd.c       \
 OMprodem.c     \
 OMrecognize.c  \
 OMrtree3df.c   \
 OMrtreehis.c   \
 OMrtreei.c     \
 OMsend.c       \
 OMslotCntrl.c  \
 OMsmmalloc.c   \
 OMsupport.c    \
 OMtags.c       \
 OMvararray.c   \
 Rooti.c        \
 OMSupGroupi.c  \
 OMarch.c       \
 OMsibling.c
