include $(top_srcdir)/build/makerules

noinst_LTLIBRARIES = libexec.la
libexec_la_CFLAGS  = $(gio_DEPS_CFLAGS)

libexec_la_SOURCES = \
 IGEcolor/APPcolor2i.I      \
 IGEcolor/IGEchgclr.I       \
 IGEcolor/IGEcolor2i.I      \
 IGEcolor/IGEcolortbl.I     \
 IGEcolor/IGEconclrtab.I    \
 IGEcolor/igecolmac.I       \
 IGEcolor/APPcolori.I       \
 IGEcolor/IGEcolori.I       \
 IGEcolor/IGEuserrampi.I    \
 IGEcolor/DPcolors.C        \
 cm/cm.I                    \
 cm/cm_forms.C              \
 cmdserver/attach.C         \
 cmdserver/detach.C         \
 cmdserver/init.C           \
 cmdserver/search.C         \
 cmdserver/strip.C          \
 cmdserver/quiet.C          \
 cmdserver/cmdserveri.I     \
 exec/exfork.C              \
 exec/exsys.C               \
 exec/execi.I               \
 exec/execj.I               \
 exec/exwfi.I               \
 exec/global_clasi.I        \
 exec/super_cmdi.I          \
 exec/file_test.C           \
 exec/set_paths.C           \
 exec/mod_type.C            \
 exec/invis_funcs.I         \
 exec/exgetptr.C            \
 exec/exintr.C              \
 exec/extran.C              \
 exec/srch_path.C           \
 exec/igestartup.I          \
 exec/exsharem.I            \
 exec/exipc.C               \
 exec/exrececho.C           \
 exec/journal.c             \
 exec/exdload.C             \
 exec/EXfile_form.C         \
 exec/EXproduct.C           \
 execco/EX_bckupi.I         \
 execco/EX_veri.I           \
 execco/EX_filei.I          \
 execco/EX_funckyi.I        \
 execco/EX_digi.I           \
 execco/EX_defbuti.I        \
 execco/EX_testi.I          \
 execco/EX_pricmdi.I        \
 execco/EX_saveasi.I        \
 execco/EX_fbackupi.I       \
 execco/EX_retrii.I         \
 execco/EX_savei.I          \
 execco/EX_exiti.I          \
 execco/EX_closei.I         \
 execco/EX_swapmenui.I      \
 execco/EX_menuchki.I       \
 execco/EX_rclkeyini.I      \
 fontexec/FEchkrngspec.C    \
 fontexec/FEfontexec.C      \
 fontexec/FEmapaddfont.C    \
 fontexec/FEreadfont.C      \
 igewindow/IGEaddgad.I      \
 igewindow/IGEclpicon.I     \
 igewindow/IGEcovicon.I     \
 igewindow/IGEdelicon.I     \
 igewindow/IGEmovicon.I     \
 igewindow/IGEgadgetsi.I    \
 igewindow/IGEwinconst.I    \
 igewindow/IGEdrwbrdr.I     \
 igewindow/IGEmanipwin.I    \
 igewindow/IGEldtrminfo.C   \
 igewindow/DPhdlevent.I     \
 igewindow/DPwnchgsiz.I     \
 igewindow/DPwncvtpnt.I     \
 igewindow/DPwnsetinq.I     \
 igewindow/DPwnaddgad.I     \
 igewindow/DPwnpasson.I     \
 igewindow/IGEwncons.I      \
 igewindow/DPwnclear.I      \
 igewindow/DPwnactivate.I   \
 igewindow/DPwndelete.I     \
 igewindow/DPwnmovicon.I    \
 igewindow/DPwncovicon.I    \
 igewindow/DPwnclpicon.I    \
 igewindow/igeinqmospos.C   \
 igewindow/IGEsractive.C    \
 locale/exlocale.C          \
 locale/exlocinit.C         \
 locale/exreadloc.C         \
 locale/exfont.C            \
 locale/exset_inq.C         \
 locale/exlogkbd.C          \
 locale/exlanguage.C        \
 module/modulei.I           \
 module/modinit.I           \
 module/modswitch.I         \
 shexec/exnucglobal.C       \
 udata/exudata.c            \
 wfi/IGEabsdigi.I           \
 wfi/IGEdigwini.I           \
 wfi/IGEinlisnri.I          \
 wfi/IGEingeni.I            \
 wfi/exerror.C              \
 wfi/filters.C              \
 wfi/keyin.C                \
 wfi/messages.C             \
 wfi/special.C              \
 wfi/wfi.C                  \
 wfi/waitmsg.C              \
 wfi/squeue.C               \
 wfi/button.C               \
 wl/WLglobal.c              \
 wl/WLIcontext.c            \
 wl/WLImisc.c               \
 wl/WLIscreen.c             \
 wl/WLIwin.c                \
 wl/WLIxor.c                \
 wl/WLcmap.c                \
 wl/WLcolorref.c            \
 wl/WLcontext.c             \
 wl/WLcursor.c              \
 wl/WLdraw.c                \
 wl/WLinit.c                \
 wl/WLmisc.c                \
 wl/WLmouse.c               \
 wl/WLraster.c              \
 wl/WLscr_getset.c          \
 wl/WLsymb.c                \
 wl/WLwin.c                 \
 wl/WLwin_getset.c          \
 wl/WLsmart.c               \
 wl/WLopengl.c              \
 wl/WLIf_X.c                \
 wl/WLIf_XENV5.c            \
 wl/WLxgl.c                 

CLEANFILES = \
 IGEcolor/APPcolor2i.c      \
 IGEcolor/IGEchgclr.c       \
 IGEcolor/IGEcolor2i.c      \
 IGEcolor/IGEcolortbl.c     \
 IGEcolor/IGEconclrtab.c    \
 IGEcolor/igecolmac.c       \
 IGEcolor/APPcolori.c       \
 IGEcolor/IGEcolori.c       \
 IGEcolor/IGEuserrampi.c    \
 IGEcolor/DPcolors.c        \
 cm/cm.c                    \
 cm/cm_forms.c              \
 cmdserver/attach.c         \
 cmdserver/detach.c         \
 cmdserver/init.c           \
 cmdserver/search.c         \
 cmdserver/strip.c          \
 cmdserver/quiet.c          \
 cmdserver/cmdserveri.c     \
 exec/exfork.c              \
 exec/exsys.c               \
 exec/execi.c               \
 exec/execj.c               \
 exec/exwfi.c               \
 exec/global_clasi.c        \
 exec/super_cmdi.c          \
 exec/file_test.c           \
 exec/set_paths.c           \
 exec/mod_type.c            \
 exec/invis_funcs.c         \
 exec/exgetptr.c            \
 exec/exintr.c              \
 exec/extran.c              \
 exec/srch_path.c           \
 exec/igestartup.c          \
 exec/exsharem.c            \
 exec/exipc.c               \
 exec/exrececho.c           \
 exec/exdload.c             \
 exec/EXfile_form.c         \
 exec/EXproduct.c           \
 execco/EX_bckupi.c         \
 execco/EX_veri.c           \
 execco/EX_filei.c          \
 execco/EX_funckyi.c        \
 execco/EX_digi.c           \
 execco/EX_defbuti.c        \
 execco/EX_testi.c          \
 execco/EX_pricmdi.c        \
 execco/EX_saveasi.c        \
 execco/EX_fbackupi.c       \
 execco/EX_retrii.c         \
 execco/EX_savei.c          \
 execco/EX_exiti.c          \
 execco/EX_closei.c         \
 execco/EX_swapmenui.c      \
 execco/EX_menuchki.c       \
 execco/EX_rclkeyini.c      \
 fontexec/FEchkrngspec.c    \
 fontexec/FEfontexec.c      \
 fontexec/FEmapaddfont.c    \
 fontexec/FEreadfont.c      \
 igewindow/IGEaddgad.c      \
 igewindow/IGEclpicon.c     \
 igewindow/IGEcovicon.c     \
 igewindow/IGEdelicon.c     \
 igewindow/IGEmovicon.c     \
 igewindow/IGEgadgetsi.c    \
 igewindow/IGEwinconst.c    \
 igewindow/IGEdrwbrdr.c     \
 igewindow/IGEmanipwin.c    \
 igewindow/IGEldtrminfo.c   \
 igewindow/DPhdlevent.c     \
 igewindow/DPwnchgsiz.c     \
 igewindow/DPwncvtpnt.c     \
 igewindow/DPwnsetinq.c     \
 igewindow/DPwnaddgad.c     \
 igewindow/DPwnpasson.c     \
 igewindow/IGEwncons.c      \
 igewindow/DPwnclear.c      \
 igewindow/DPwnactivate.c   \
 igewindow/DPwndelete.c     \
 igewindow/DPwnmovicon.c    \
 igewindow/DPwncovicon.c    \
 igewindow/DPwnclpicon.c    \
 igewindow/igeinqmospos.c   \
 igewindow/IGEsractive.c    \
 locale/exlocale.c          \
 locale/exlocinit.c         \
 locale/exreadloc.c         \
 locale/exfont.c            \
 locale/exset_inq.c         \
 locale/exlogkbd.c          \
 locale/exlanguage.c        \
 module/modulei.c           \
 module/modinit.c           \
 module/modswitch.c         \
 shexec/exnucglobal.c       \
 wfi/IGEabsdigi.c           \
 wfi/IGEdigwini.c           \
 wfi/IGEinlisnri.c          \
 wfi/IGEingeni.c            \
 wfi/exerror.c              \
 wfi/filters.c              \
 wfi/keyin.c                \
 wfi/messages.c             \
 wfi/special.c              \
 wfi/wfi.c                  \
 wfi/waitmsg.c              \
 wfi/squeue.c               \
 wfi/button.c               
