include $(top_srcdir)/build/makerules

noinst_LTLIBRARIES  = libexnuc.la

libexnuc_la_SOURCES =

libexnuc_la_LIBADD =          \
 ../spec/libspec.la           \
 ../om/spec/libom_spec.la     \
 ../om/src/libom_src.la       \
 ../om/IGRdir/libom_igrdir.la \
 ../icob/libicob.la           \
 ../exec/libexec.la           \
 ../message/src/libmessage.la \
 ../igefei/libigefei.la       \
 ../version/libversion.la     \
 ../stubs/libstubs.la
