include $(top_srcdir)/build/makerules

IG_OPP_INCLUDES += -I ../include -I ./include

noinst_LTLIBRARIES  = libom_igrdir.la

libom_igrdir_la_CFLAGS   = $(gio_DEPS_CFLAGS)

libom_igrdir_la_SOURCES  = \
 btree/DIbstgri.I   \
 btree/DIbsti.I     \
 btree/DIbstobi.I   \
 btree/DIbtreei.I   \
 btree/DIuntree.C   \
 dir/DIboot.I       \
 dir/DIconfig.I     \
 dir/DIdbg.C        \
 dir/DIdump.I       \
 dir/DIfast_trans.I \
 dir/DIindex.I      \
 dir/DIlib.I        \
 dir/DIlinki.I      \
 dir/DImaci.I       \
 dir/DImasteri.I    \
 dir/DImkpath.I     \
 dir/DImove.I       \
 dir/DIrectori.I    \
 dir/DIregexp.C     \
 dir/DIrooti.I      \
 dir/DIsearch.I     \
 dir/DIsyn.I        \
 dir/DIuntrans.I    \
 dir/IGRdiri.I      \
 group/GRoupi.I     \
 group/GRoupsi.I

CLEANFILES =        \
 btree/DIbstgri.c   \
 btree/DIbsti.c     \
 btree/DIbstobi.c   \
 btree/DIbtreei.c   \
 btree/DIuntree.c   \
 dir/DIboot.c       \
 dir/DIconfig.c     \
 dir/DIdbg.c        \
 dir/DIdump.c       \
 dir/DIfast_trans.c \
 dir/DIindex.c      \
 dir/DIlib.c        \
 dir/DIlinki.c      \
 dir/DImaci.c       \
 dir/DImasteri.c    \
 dir/DImkpath.c     \
 dir/DImove.c       \
 dir/DIrectori.c    \
 dir/DIregexp.c     \
 dir/DIrooti.c      \
 dir/DIsearch.c     \
 dir/DIsyn.c        \
 dir/DIuntrans.c    \
 dir/IGRdiri.c      \
 group/GRoupi.c     \
 group/GRoupsi.c

